force-app/main/default/objects/Floor__c/Floor__c.object-meta.xml
<CustomObject>
    <description>A physical floor within a data centre Site. Child of Site__c. Parent of DataHall__c and Inventory__c records.</description>
    <label>Floor</label>
    <nameField>
        <label>Floor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Floors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>