force-app/main/default/objects/Floor__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <description>Master Detail to Site__c, sharing to be Controlled by parent</description>
    <label>Site</label>
    <referenceTo>Site__c</referenceTo>
    <relationshipLabel>Floors</relationshipLabel>
    <relationshipName>Floors</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>