force-app/main/default/objects/Floor__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Sequence__c</columns>
    <columns>Site__c</columns>
    <columns>Customer_Floor__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>